# QuickMath

./: CMakeCache.txt  CMakeLists.txt  Makefile  QuickMath  README.md  cmake_install.cmake  config.h  factorial.c  main.cpp  pascal.cpp  pascal.h  ptriangle.cpp  userInput.h
Combi/: combi.cpp  combi.h
Factorial/: factorial.cpp  factorial.h
LinAlg/: .vector.cpp.swp  .vector.h.swp  matrix.cpp  matrix.h  vector.cpp  vector.h
Math/: exponent.cpp  exponent.h  operators.h
Pascal/: pascal.h
Trig/: trigFunctions.cpp  trigFunctions.h
factorial/: factorial.h
pascal/: pascal.h
